--- a/products.html
+++ b/products.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
+            <a class="nav-link" href="home.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories.html">Categorías</a>
@@ -37,11 +37,12 @@
     </div>
   </nav>
   <main class="pb-5 container">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
-    </div>
+    <!-- mio -->
+    <h1 id="h1Autos">Productos</h1>
+    <p id="autosCatDes">Verás aquí todos los productos de la categoría <b>Autos</b></p>
+    <p id="catAutos"></p>
+
+    <!-- mio -->
   </main>
   <footer class="text-muted">
     <div class="container">
