--- a/home.html
+++ b/home.html
@@ -29,7 +29,9 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item"></li>
+          <li class="nav-item">
+            <a class="nav-link" href="my-profile.html" id="localSCorreo"></a>
+          </li>
         </ul>
       </div>
     </div>
