--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
     </form>
   </main>
-  <footer class="text-muted">
+  <footer class="text-muted p-4">
     <div class="container">
       <p class="float-end">
         <a href="#">Volver arriba</a>
