--- a/my-profile.html
+++ b/my-profile.html
@@ -62,9 +62,60 @@
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+      <br>
+      <h1 class="d-flex justify-content-center">Perfil</h1>
+      <br>
+      <hr>
+      <form action="" name="form" class="needs-validation" novalidate>
+        <div class="d-flex flex-row justify-content-center flex-wrap form-profile">
+          <div class="d-flex flex-column item-form">
+            <label for="firstname">Primer nombre*</label>
+            <input type="text" name="firstname" id="firstname" class="form-control border border-1" required>
+            <div class="invalid-feedback">
+              Ingrese su primer nombre.
+            </div>
+          </div>
+          <div class="d-flex flex-column item-form">
+            <label for="secondname">Segundo nombre</label>
+            <input type="text" name="secondname" id="secondname" class="form-control border border-1">
+          </div>
+          <div class="d-flex flex-column item-form">
+            <label for="lastname">Primer apellido*</label>
+            <input type="text" name="lastname" id="lastname" class="form-control border border-1" required>
+            <div class="invalid-feedback">
+              Ingrese su primer apellido.
+            </div>
+          </div>
+          <div class="d-flex flex-column item-form">
+            <label for="secondlastname">Segundo apellido</label>
+            <input type="text" name="secondlastname" id="secondlastname" class="form-control border border-1">
+          </div>
+          <div class="d-flex flex-column item-form">
+            <label for="email">E-mail</label>
+            <input type="email" name="email" id="email" class="form-control border border-1" required>
+            <div class="invalid-feedback">
+              Ingrese un email válido.
+            </div>
+          </div>
+          <div class="d-flex flex-column item-form">
+            <label for="phone">Teléfono de contacto*</label>
+            <input type="tel" name="phone" id="phone" class="form-control border border-1"
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" placeholder="123-456-789" required>
+            <div class="valid-feedback">
+              Looks good!
+            </div>
+            <div class="invalid-feedback">
+              Ingrese un número de teléfono válido.
+            </div>
+          </div>
+        </div>
+        <br>
+        <br>
+        <hr>
+        <div class="lol">
+          <button type="submit" class="btn btn-primary" id="enviar">Guardar cambios</button>
+        </div>
+      </form>
     </div>
   </main>
   <footer class="text-muted">
