--- a/my-profile.html
+++ b/my-profile.html
@@ -67,7 +67,8 @@
       <hr>
       <div class="d-flex flex-column">
         <label for="avatar" class="custom-file-upload d-flex justify-content-center rounded" id="divHover">
-          <img src="img/img_perfil.png" alt="Submit" style="position: absolute;" width="100px" height="90px" id="pfp">
+          <img src="img/img_perfil.png" alt="Submit" style="position: absolute; border-radius: 5px;" width="100px"
+            height="90px" id="pfp">
           <div class="divChangeImage d-none" id="divChangeImage">
             <p class="changeImage">Cambiar imágen</p>
           </div>
