--- a/products.html
+++ b/products.html
@@ -48,8 +48,8 @@
   </nav>
   <main class="pb-5 container">
     <!-- mio -->
-    <h1 id="h1Autos">Productos</h1>
-    <p id="autosCatDes">Verás aquí todos los productos de la categoría <b>Autos</b></p>
+    <h1 id="h1Cat">Productos</h1>
+    <p id="CatDes"></p>
     <div class="container">
       <div class="row">
         <div class="col text-end">
@@ -79,6 +79,9 @@
                 <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
               </div>
             </div>
+            <div class="input-group mb-3">
+              <input type="search" class="form-control" placeholder="Buscar" id="inputBuscar">
+            </div>
           </div>
         </div>
       </div>
@@ -87,7 +90,7 @@
         </div>
       </div>
     </div>
-    <p id="catAutos"></p>
+    <p id="CAT"></p>
 
     <!-- mio -->
   </main>
